--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   <body>
     <div id="root"></div>
     <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.js"></script>
-    <script type="module" src="src/main.jsx"></script>
+    <script type="module" src="./src/main.jsx"></script>
   </body>
 </html>
